Added send and receive from edit activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">CodepathTodo</string>
+    <string name="app_name">Todo</string>
+    <string name="saveButton">Save</string>
 </resources>
